--- a/firebase.json
+++ b/firebase.json
@@ -14,7 +14,7 @@
     ],
     "headers": [
       {
-        "source" : "service-worker.js",
+        "source" : "*",
         "headers" : [ 
             {
             "key" : "Cache-Control",
