--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,27 +1,49 @@
 {
-  "name": "Progressive Web Apps - example project",
-  "short_name": "PWA Example",
+  "name": "PWA Example Project",
+  "short_name": "PWAEX",
+  "description": "Progressive Web Apps example project",
   "lang": "en-US",
   "start_url": "/",
-  "display": "standalone",
+  "scope": "/",
+  "orientation": "portrait-primary",
   "theme_color": "#9EE073",
-  "background_color": "#9EE073",
+  "display": "standalone",
   "icons": [
     {
-      "src": "logo.png",
-      "sizes": "512x512",
+      "src": "/assets/images/icons/icon-16x16.png",
+      "sizes": "16x16",
       "type": "image/png"
     },
     {
-      "src": "logo.png"
+      "src": "/assets/images/icons/icon-24x24.png",
+      "sizes": "24x24",
+      "type": "image/png"
     },
     {
-      "src": "logo.png",
-      "sizes": "180x180"
+      "src": "/assets/images/icons/icon-32x32.png",
+      "sizes": "32x32",
+      "type": "image/png"
     },
     {
-      "src": "logo.png",
-      "sizes": "144x144"
+      "src": "/assets/images/icons/icon-64x64.png",
+      "sizes": "64x64",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/images/icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/images/icons/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/images/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"      
     }
-  ]
+  ],
+  "background_color": "#9EE073"
 }
